@@ -1,4 +1,36 @@
+# For now, the default command prefix is "/"
+# Example: /echo Hello There
+# You are free to change the command prefix to anything you wish.
+
+
 PREFIX = "/"
+
+###################################################################################################
+# Please follow this tutorial to get various Discord IDs
+# https://support.discordapp.com/hc/en-us/articles/206346498-Where-can-I-find-my-User-Server-Message-ID-
+
 BOT_OWNER_ID = "Bot Owner's ID here"
 BOT_ID = "Bot's ID here"
+
+###################################################################################################
+# Follow this tutorial to get a Discord Bot token
+# https://github.com/reactiflux/discord-irc/wiki/Creating-a-discord-bot-&-getting-a-token
+
 BOT_TOKEN = "Bot's Token here"
+
+###################################################################################################
+# To get Firebase info, follow this tutorial until you get all of the information to fill out the missing data below
+# https://firebase.google.com/docs/web/setup
+
+FIREBASE_INFO = {
+    "apiKey": "Firebase API Key here",
+    "authDomain": "Firebase Auth Domain here",
+    "databaseURL": "Firebase Database Url here",
+    "projectId": "Firebase Project ID here",
+    "storageBucket": "Firebase Storage Bucket here",
+    "messagingSenderId": "Firebase Messaging Sender ID here"
+}
+
+###################################################################################################
+
+# Thank you for using DMCTruong's Discord Bot!
