@@ -1,3 +1,11 @@
+07/26/17
+- Added some tutorial in configurations.py
+- Added the following commands that are related to Minecraft though it may be used for other things as well
+	/show_location_names: The bot returns a list of names of locations from the database
+	/add_location: The user can add new locations (name, coordinates)to the database
+	/show_location: The bot returns the coordinates of the location that the user specifies from using the command /show_location_names
+- The Firebase database now works with Discord Bot
+
 07/25/17
 - Removed /test command, it was redundant
 - Minor changes to the following commands: 
